# OpenSlop

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DESIGN.md  Makefile  PHILOSOPHY.md  README.md  ROADMAP.md
.agents/skills/: SKILLS.md
apps/: AGENTS.md
apps/macos-app/: AGENTS.md  Package.swift
docs/: AGENTS.md
docs/architecture/: domain-map.mmd  runtime-topology.mmd  slice-dependencies.mmd  system-context.mmd
docs/design/: composer-routing-flow.mmd  interaction-model.mmd  navigation-model.mmd  premium-window-grammar.mmd  window-layout.mmd
domains/: AGENTS.md
domains/approval/: AGENTS.md
domains/artifact/: AGENTS.md
domains/browser/: AGENTS.md
domains/git/: AGENTS.md
domains/harness/: AGENTS.md
domains/provider/: AGENTS.md
domains/search/: AGENTS.md
domains/session/: AGENTS.md
domains/verify/: AGENTS.md
domains/workspace/: AGENTS.md
plans/: AGENTS.md
reviews/: AGENTS.md
reviews/agents/: architecture-reviewer.md  browser-reviewer.md  harness-reviewer.md  native-ui-reviewer.md  perf-reviewer.md  provider-reviewer-claude.md  provider-reviewer-codex.md  security-reviewer.md  verify-reviewer.md
services/: AGENTS.md
services/browser-runner/: AGENTS.md
services/claude-bridge/: AGENTS.md  package.json
services/core-daemon/: AGENTS.md  Cargo.toml
services/core-daemon/src/: main.rs
shared-kernel/: AGENTS.md
tools/: AGENTS.md
tools/doc-lint/: AGENTS.md
tools/mapgen/: AGENTS.md
tools/perf-bench/: AGENTS.md
tools/refshot/: AGENTS.md
tools/repo-lint/: AGENTS.md  check_repo_shape.py
tools/review-runner/: AGENTS.md
(+412 files in other folders)
