[package]
name = "core-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
provider-domain = { path = "../../domains/provider/rust/provider-domain" }
session-domain = { path = "../../domains/session/rust/session-domain" }

[dev-dependencies]
tempfile = "3"
